Services/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr
          ports:
            - containerPort: 9696
          volumeMounts:
          - mountPath: /config
            name: prowlarr
      volumes:
          - name: prowlarr
            persistentVolumeClaim:
              claimName: prowlarr
