Services/media/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  annotations:
    # If your Traefik is listening for this annotation:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.zlaya.tech`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
      middlewares:
        - name: oidc-auth
          namespace: prowlarr
        - name: default-headers
          namespace: default
  tls: {}
